# point-frustums-public

./: .clang-format  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  ReadMe.md  pyproject.toml  setup.py
configs/: config.yaml  nuscenes.yaml  point_frustums.yaml
configs/datasets/: nuscenes.yaml
configs/models/: point_frustums.yaml
point_frustums/: __init__.py  __main__.py
point_frustums/augmentations/: __init__.py  augmentations.py  augmentations_geometric.py  augmentations_other.py
point_frustums/callbacks/: __init__.py  gradient_clipping.py  nuscenes_submission.py  weight_initialization.py
point_frustums/cli/: lightning_cli_arg_helpers.py
point_frustums/config_dataclasses/: dataset.py  fpn.py  point_frustums.py
point_frustums/dataloaders/: __init__.py  nuscenes.py
point_frustums/evaluators/: __init__.py  base_evaluator.py  nuscenes.py
point_frustums/functional/: __init__.py  interpolation.py
point_frustums/geometry/: boxes.py  coordinate_system_conversion.py  quaternion.py  rotation_conversion.py  rotation_matrix.py  utils.py
point_frustums/models/: __init__.py  base_models.py  base_runtime.py  point_frustums.py
point_frustums/ops/: nms.py  rotation_conversions.py  spherical_coos_convolutions.py
point_frustums/utils/: custom_types.py  environment_helpers.py  geometry.py  logging.py  plotting.py  targets.py
scripts/: nuscenes_to_range_view.py  prepare_nuscenes_dataset.py  urls.txt
scripts/nuscenes_source/: urls_camera_only.txt  urls_can.txt  urls_complete.txt  urls_keyframes_only.txt  urls_lidar_only.txt  urls_meta.txt  urls_mini.txt  urls_radar_only.txt
test/augmentations/: augmentations_geometric.py
test/metrics/: test_nds.py
(+37 files in other folders)
